manifests/media-stack/jellyfin/jellyfin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - protocol: TCP
      port: 8096
      targetPort: 8096
