manifests/media-stack/jellyfin/jellyfin-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingressroute
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyfin.janikhenz.ch`)
      kind: Rule
      services:
        - name: jellyfin-service
          port: 8096
